--- a/MovieSeatBooking/index.html
+++ b/MovieSeatBooking/index.html
@@ -11,10 +11,10 @@
     <div class="movie-container">
         <label>Pick a movie:</label>
         <select id="movie">
-            <option value="10">Avengers Endgame</option>
-            <option value="12">Joker</option>
-            <option value="8">Toy Story 4</option>
-            <option value="9">The Lion King</option>
+            <option value="10">Avengers Endgame ($10)</option>
+            <option value="12">Joker ($12)</option>
+            <option value="8">Toy Story 4 ($8)</option>
+            <option value="9">The Lion King ($9)</option>
         </select>
     </div>
 
@@ -111,7 +111,7 @@
     </div>
 </div>
 
-<p class="text">You have selected <span class="id">0 </span> seats for a price of <span class="total">0</span></p>
+<p class="text">You have selected <span id="count">0 </span> seats for a price of <span id="total">0</span></p>
 
     <script src="script.js"></script>
 </body>
