end of omnifood

--- a/OmniFood/index.html
+++ b/OmniFood/index.html
@@ -13,15 +13,18 @@
 </head>
 <body>
     <header>
-        <nav>
+        <!-- <nav class="sticky"> -->
+            <nav>
             <div class="row">
                 <img src="resources/css/img/logo-white.png" alt="Omnifood logo" class="logo">
+                <img src="resources/css/img/logo.png" alt="Omnifood logo" class="logo-black">
                 <ul class="main-nav">
                     <li><a href="#">Food delivery</a></li>
                     <li><a href="#">How it works</a></li>
                     <li><a href="#">Our cities</a></li>
                     <li><a href="#">Sign up</a></li>
                 </ul>
+                <a class="mobile-nav-icon"><ion-icon name="menu-outline" class="hamburger"></ion-icon></a>
             </div>
         </nav>
         <div class="hero-text-box">
@@ -403,6 +406,14 @@
     </footer>
 
     <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
+    <script src="//cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
+	<script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
+	<script src="//cdn.jsdelivr.net/selectivizr/1.0.3b/selectivizr.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script src="vendors/js/jquery.waypoints.min.js"></script>
+	<script src="resources/js/script.js"></script> 
+	<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+	<script src="vendors/js/gmaps.js"></script>
 </body>
 </html>
 
