First bootstrap project

--- a/Bootstrap/Basics/3_8_tables_pagination.html
+++ b/Bootstrap/Basics/3_8_tables_pagination.html
@@ -187,14 +187,14 @@
                     <th>Email</th>
                 </tr>
             </thead>
-            <tbody>
-                <tr>
-                    <th scope="row">1</th>
+            <tbody >
+                <tr  class="table-danger">
+                    <th scope="row" >1</th>
                     <td>John</td>
                     <td>Doe</td>
                     <td>jdoe@gmail.com</td>
                 </tr>
-                <tr>
+                <tr  class="table-success">
                     <th scope="row">2</th>
                     <td>Will</td>
                     <td>Johnson</td>
