end work on project 3

--- a/Bootstrap/Project3/services.html
+++ b/Bootstrap/Project3/services.html
@@ -37,7 +37,16 @@
     </div>
 </nav>
 
-
+<header id="page-header">
+  <div class="container">
+      <div class="row">
+          <div class="col-md-6 m-auto text-center">
+              <h1>About us</h1>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, unde?</p>
+          </div>
+      </div>
+  </div>
+</header>
 
 <section id="services" class="py-5">
     <div class="container">
